<resources>
    <string name="app_name">mob-dev-portfolio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="owner_s_name">Owner\'s name</string>
    <string name="who_was_it">Who was it?</string>
    <string name="call_type">Call type</string>
    <string name="hint">hint</string>
    <string name="your_name">Your Name</string>
    <string name="name" >name</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="comment">Comment</string>
    <string name="please_share_your_comment">Please share your comment</string>
    <string name="submit">Submit</string>
    <string name="search_icon">Search Icon</string>
    <string name="search_bar_text">Please enter a phone number in the box above to search</string>
    <string name="search_for_a_phone_number_here">Search for a phone number here</string>
    <string name="unknown">Unknown</string>
    <string name="here_is_the_list_of_phone_numbers_that_you_reported">Here is the list of phone numbers that you reported</string>
    <string name="here_is_the_list_of_phone_numbers_that_you_blocked">Here is the list of phone numbers that you blocked</string>>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="block_phone_number">Block phone number</string>
    <string name="block_phone_number_message">Are you sure you want to block the number?</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="block_dialog">Block Dialog</string>
    <string name="toast_blocked_message">Sorry you already blocked this phone number</string>
    <string-array name="callType_spinner">
        <item>Not Specified</item>
        <item>Scam</item>
        <item>Missed Call</item>
        <item>Marketing</item>
        <item>Fake ID</item>
        <item>Survey</item>
        <item>Threats</item>
        <item>Prank call</item>
        <item>Auto reminder</item>
        <item>Debt collector</item>
        <item>Text message</item>
    </string-array>
</resources>